--- a/index.html
+++ b/index.html
@@ -11,17 +11,55 @@
 
 </head>
 <body>
-    <section>
+    <section id="top-banner">
         <div class="half">
             <h1>Welcome to</h1>
-            <h1><span id="name-highlit">Tanvir's</span>  World</h1>
+            <h1><span class="orange-highlight">Tanvir's</span>  World</h1>
             <h2>world-class professional web devoloper</h2>
-            <p>Hi!! My name is tanvir.I come from bangladesh. <br> I can web design and devolop. <br> If you need a website then you can contact with me. <br> I can do your work seriously.And my service is very fast</p>
+            <p>Hi!! My name is tanvir.I come from bangladesh. <br> I can web design and devolop. <br> If you need a website then you can contact with me. <br> I can do your work seriously.And my service is very fast.</p>
+            <a class="link-button" target="blank" href="https://www.facebook.com/nibir.tanvir.7/">HIRE ME</a>
         </div>
         <div class="half">
             <img src="images/tanvir1.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half">
+            <img src="images/tanvir2.png" alt="">
+
+        </div>
+        <div class="half">
+            <h2>My dream</h2>
+            <h3>Become world number 1 web devoloper</h3>
+            <p>
+                I alredy learn advance html and css. I also learn git and github.I can build up simple website.Inshllah,one day I will be world class web devoloper.You can visit my fevourite devoloper youtube channel..
+            </p>
+            <a class="link-button" target="blank" href="https://www.youtube.com/user/jhankarmahbub">DOWNLOAD RESUME</a>
+
+        </div>
+
+    </section>
+    <section class=experience>
+        <h2>Experience</h2>
+        <div id="border" class="half single-experience">
+            <h2>Full stack web devoloper</h2>
+            <h3 class="orange-highlight">2021-present | professional web devoloper</h3>
+            <p>I am a professional web devoloper and I am a master of html,css and javascript.I can build any type of website.I know html,css,javascript,butstrap,php,github etc.I also devolop my skill day by day,</p>
+
+        </div>
+        <div id="baby" class="half single-experience">
+            <h2>Baby wab devoloper</h2>
+            <h3 class="orange-highlight">2020-2021 | programming larner</h3>
+            <p>In 2019, I do not knew anything about website devolop. I start my devolopment in 2020.I make many lot of website.For this reason, I am so happy for my jurney.Nowday I am a pro level we devoloper.</p>
+
+        </div>
+
+    </section>
+    <footer>
+        <h4>For contact</h4>
+        <p>tanvir101tk@gmail.com</p>
+        <p>01641866230</p>
+    </footer>
     
 </body>
 </html>
